[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safemask"
version = "1.0.0"
description = "Privacy-Preserving Text Processing Engine - Detect, validate, and intelligently mask sensitive information (PII, secrets, financial data) in text with configurable masking strategies."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Amal"}
]
requires-python = ">=3.10"
keywords = ["privacy", "pii", "masking", "security", "text-processing", "sensitive-data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
]
dependencies = [
    "spacy>=3.7.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "isort>=5.0",
    "bandit>=1.7",
    "mkdocs>=1.4",
    "mkdocs-material>=8.0",
    "pre-commit>=3.0",
    "twine>=4.0",
    "build>=0.10",
]

[project.urls]
Homepage = "https://github.com/amalsp220/safemask"
Documentation = "https://amalsp220.github.io/safemask"
Repository = "https://github.com/amalsp220/safemask"
Issues = "https://github.com/amalsp220/safemask/issues"

[project.scripts]
safemask = "safemask.cli:main"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=safemask --cov-report=term-missing --cov-report=html -v"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.bandit]
skips = ["B101"]
