[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safemask"
version = "1.0.0"
description = "Privacy-Preserving Text Processing Engine - Detect, validate, and intelligently mask sensitive information (PII, secrets, financial data) in text with configurable masking strategies."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Amal SP", email = "amalsp220@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["privacy", "pii", "masking", "security", "text-processing", "sensitive-data", "detection", "validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/amalsp220/safemask"
Documentation = "https://github.com/amalsp220/safemask"
Repository = "https://github.com/amalsp220/safemask.git"
Issues = "https://github.com/amalsp220/safemask/issues"

[tool.setuptools]
packages = ["safemask"]

[tool.setuptools.package-data]
safemask = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=safemask --cov-report=html --cov-report=term-missing -v"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["safemask"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
skips = ["B101"]
